--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-recipe-app",
-  "homepage": "https://github.com/Craig-Blanchard-Dev/Recipe-Finder.git",
+  "homepage": "https://github.com/Craig-Blanchard-Dev/Recipe-Finder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,6 +41,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.2.0"
   }
 }
